previous/whatismyip/nginx-myip-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-myip
  labels:
    app: nginx-myip
  namespace: whatismyip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-myip
  template:
    metadata:
      labels:
        app: nginx-myip
      namespace: whatismyip
    spec:
      containers:
      - name: nginx-myip
        image: nginx
        ports:
        - containerPort: 80

        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          name: config
          subPath: index.html

      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-config
        name: config
